# ai-engineering-lidr

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
app/: config.py  logging_config.py  main.py
app/cache/: __init__.py  llm_cache.py
app/context/: examples.py
app/routers/: estimations.py
app/services/: evaluation.py  llm_service.py  llm_wrapper.py
app/static/: sse_demo.html
fixtures/: sample_transcription.txt
scripts/: check_structure.py
tests/: conftest.py  test_cache.py  test_context.py  test_estimate.py  test_estimate_stream.py  test_evaluation.py  test_health.py  test_history.py  test_structure.py  test_wrapper.py
tutorial_aprendizaje/: 00-de-prototipo-a-producto.md  01-interfaces-conversacionales.md  02-abstraccion-y-fallback.md  03-cacheo-inteligente.md  04-streaming.md  05-observabilidad.md  06-retos-extra.md  README.md
tutorial_aprendizaje/material_curso/: 00-de-prototipo-a-producto.md  01-interfaces-conversacionales.md  02-abstraccion-y-fallback.md  03-cacheo-inteligente.md  04-streaming.md  05-observabilidad.md  EJERCICIO.md
